# rotem

./: .dockerignore  .editorconfig  .envrc.sample  .gitignore  .jshintrc  Dockerfile  Makefile  README.md  app.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
app/: __init__.py  breadcrumbs.py  custom_types.py  menu.py  results_mapper.py  routes.py
app/interpretation/: __init__.py  abc.py  enums.py  errors.py  mappers.py  setters.py  utils.py
app/news/: __init__.py
app/settings/: base.py
app/static/css/: errors.css  form.css  forms.css  layout.css  main.css  menu.css  modal.css  news.css  styles.css  tables.css
app/static/js/: form.js  main.js  modal.js  script.js
app/templates/: about.html  base.html  index.html  rotem_parameters.html  rotem_tests.html  video_instructions.html
app/templates/errors/: 400.html  404.html  500.html
app/templates/includes/: breadcrumbs.html  footer.html  header.html  menu.html
app/templates/menu/: _base.html  about.html  help.html  historical_data.html  results_interpretation.html  tests.html  useful_links.html  video_instructions.html  video_instructions_smth.html  video_instructions_work.html
app/views/: errors.py  menu.py  routes.py
tests/: conftest.py  test_errors.py  test_obsteric_functional.py  test_results_mapper.py  test_surgery_functional.py  test_views.py
