[tool.poetry]
name = "rotem"
version = "0.1.0"
description = "Website about the Rotem and medicine news agregator."
authors = [
    "fj-fj-fj <x1x1xx0@protonmail.com>"
]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
# Heroku fail: Read Python version from poetry.lock and ^3.9.0 is not valid
# python = "^3.9.0"
python = "3.10.0"
Flask = "^2.0.2"
newsapi-python = "^0.2.6"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
coverage = "^6.1.2"
black = "^21.12b0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 310
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]


[tool.black]
target-version = ['py310']
force-exclude = '''
.*/setup\.py$
'''


# https://github.com/python-poetry/poetry/pull/4510
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"


[[tool.mypy.overrides]]
module = [
]
ignore_errors = true


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

# pytest configuraion
# -------------------
# minversion (string): minimally required pytest version.
# addopts (args): extra command line options.
#  -r chars: show extra test summary info as specified by chars, (a)ll except passed.
#  -q, --quiet: decrease verbosity.
#  -s: shortcut for --capture=no.
# testpaths (args): directories to search for tests when no files or directories are given in the command line.
# * `poetry run pytest --help` to see more commands.
#
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
